# hakoniwa-digital-twin

./: .gitmodules  README.md  run.bash
digital/config/: asset_def.txt  custom.json  ros_msgs.txt
digital/config/ar/: ar_bridge_config.json  custom.json  xr_config.json
digital/fix-codes/mros2/: templates_generator.py
digital/utils/: ar_marker.py  install-sampe.bash  run.bash
real/robot/: run.bash
real/robot/tb3/: README.md  move-test.bash  robot.launch.py
real/robot/workspace/src/tb3_controller/: CMakeLists.txt  package.xml
real/robot/workspace/src/tb3_controller/src/: tb3_controller.cpp
real/sensors/: run_nodes.bash
real/sensors/docker/: run.bash
real/sensors/drivers/Hokuyo/urg/: README.md  install.bash
real/sensors/drivers/TG15/: README.md  install.bash
real/sensors/drivers/TG15/ydlidar_ros_driver/launch/: ydlidar_launch_view.py
real/sensors/drivers/TG15/ydlidar_ros_driver/param/: ydlidar.yaml
real/sensors/drivers/TG15/ydlidar_ros_driver/src/: ydlidar_ros2_driver_node.cpp
real/sensors/workspace/: original_segments.csv  segments.csv
real/sensors/workspace/src/infra_sensor_2dlidar/: package.xml  setup.cfg  setup.py
real/sensors/workspace/src/infra_sensor_tg15/: package.xml  setup.cfg  setup.py
real/sensors/workspace/src/infra_sensor_urg/: package.xml  setup.cfg  setup.py
real/sensors/workspace/src/sensor_checker/: package.xml  setup.cfg  setup.py
real/sensors/workspace/utils/: graph.py
real/test/: lidar_sensor_test.py
utils/: ros_heartbeat_check.bash  z_heartbeat_check.py  zenoh_heartbeat_check.bash
(+19 files in other folders)
